...
            <connections>
                <outlet property="delegate" destination="Voe-Tx-rLC" id="GzC-gU-4Uq"/>
            </connections>
        </customObject>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="BindableControlsApp" customModuleProvider="target">
            <connections>
                <outlet property="outlineView" destination="npL-MS-w2J" id="Kht-0L-bNY"/>
                <outlet property="rootView" destination="EiT-Mj-1SZ" id="hyT-fU-DHR"/>
                <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
            </connections>
        </customObject>
...
                                                            <rect key="frame" x="26" y="3" width="121" height="18"/>
                                                            <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" title="Page Name" placeholderString="Untitled Page" usesSingleLineMode="YES" id="ffY-f2-7NF">
                                                                <font key="font" metaFont="system"/>
                                                                <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                                                <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                            </textFieldCell>
                                                            <accessibility identifier="PageName"/>
                                                        </textField>
                                                    </subviews>
                                                    <constraints>
                                                        <constraint firstItem="8EX-y5-TGH" firstAttribute="bottom" secondItem="LBy-VP-IiF" secondAttribute="bottom" id="CcT-ry-4gA"/>
                                                        <constraint firstAttribute="bottom" secondItem="8EX-y5-TGH" secondAttribute="bottom" constant="3" id="W3O-w7-FcE"/>
                                                        <constraint firstItem="LBy-VP-IiF" firstAttribute="leading" secondItem="TSR-tx-1T8" secondAttribute="leading" constant="3" id="YCn-n4-MMS"/>
...
